@startuml
left to right direction
package "taskt.Core.Automation.Commands"{
class "GetListIndexCommand" <<sealed>> {
+RunCommand() : void 
+v_Result : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "AListGetFromListCommands"{
+{abstract} v_Result : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "AListInputListCommands"{
+v_List : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IListGetFromListProperties" {
}
}

package "taskt.Core.Automation.Commands"{
abstract class "ScriptCommand"{
+RunCommand() : void 
+RunCommand() : void 
+GetDisplayValue() : String
+Render() : List
+Render() : List
+AfterShown() : void 
+Refresh() : void 
+BeforeValidate() : void 
+IsValidate() : Boolean
+ConvertToIntermediate() : void 
+ConvertToIntermediate() : void 
+ConvertToRaw() : void 
+ConvertToRaw() : void 
+Clone() : ScriptCommand
+CheckMatched() : Boolean
+Replace() : Boolean
+AddInstance() : void 
+RemoveInstance() : void 
+CommandID : String <<get>> <<set>> 
+CommandName : String <<get>> <<set>> 
+IsCommented : Boolean <<get>> <<set>> 
+SelectionName : String <<get>> <<set>> 
+DefaultPause : Int32 <<get>> <<set>> 
+LineNumber : Int32 <<get>> <<set>> 
+PauseBeforeExeucution : Boolean <<get>> <<set>> 
+DisplayForeColor : Color <<get>> <<set>> 
+v_Comment : String <<get>> <<set>> 
+CommandEnabled : Boolean <<get>> <<set>> 
+IsValid : Boolean <<get>> <<protected set>>
+IsWarning : Boolean <<get>> <<protected set>>
+validationResult : String <<get>> <<protected set>>
+IsMatched : Boolean <<get>> <<protected set>>
+IsDontSavedCommand : Boolean <<get>> <<set>> 
+IsNewInsertedCommand : Boolean <<get>> <<set>> 
+CustomRendering : Boolean <<get>> <<set>> 
+ControlsList : Dictionary <<get>> 
+RenderedControls : List<System.Windows.Forms.Control>
#_ControlsList : Dictionary<string, System.Windows.Forms.Control>
}
}

package "taskt.Core.Automation.Commands"{
Interface "IListProperties" {
+{abstract} v_List : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IResultProperties" {
+{abstract} v_Result : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IUIParameterProperties" {
+{abstract} ControlsList : Dictionary <<get>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICommandIDProperties" {
+{abstract} CommandID : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICanHandleList" {
}
}

package "taskt.Core.Automation.Commands"{
Interface "IExpandableProperties" {
}
}

taskt.Core.Automation.Commands.GetListIndexCommand --|> taskt.Core.Automation.Commands.AListGetFromListCommands
taskt.Core.Automation.Commands.AListGetFromListCommands --|> taskt.Core.Automation.Commands.AListInputListCommands
taskt.Core.Automation.Commands.AListGetFromListCommands ..|> taskt.Core.Automation.Commands.IListGetFromListProperties
taskt.Core.Automation.Commands.AListInputListCommands --|> taskt.Core.Automation.Commands.ScriptCommand
taskt.Core.Automation.Commands.AListInputListCommands ..|> taskt.Core.Automation.Commands.IListProperties
taskt.Core.Automation.Commands.IListGetFromListProperties --|> taskt.Core.Automation.Commands.IListProperties
taskt.Core.Automation.Commands.IListGetFromListProperties --|> taskt.Core.Automation.Commands.IResultProperties
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.IUIParameterProperties
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.ICommandIDProperties
taskt.Core.Automation.Commands.IListProperties --|> taskt.Core.Automation.Commands.ICanHandleList
taskt.Core.Automation.Commands.IListProperties --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.ICanHandleList --|> taskt.Core.Automation.Commands.IExpandableProperties
@enduml